service.yaml
apiVersion: v1
kind: Service
metadata:
 name: webapp
 namespace: testing
spec:
 type: ClusterIP
 ports:
   - port: 8002
     targetPort: 8000
 selector:
   app: webapp
