ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/alexander.talanov[/](.*)
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 8002
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 8002
